<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_app_icon"/>

    <TextView
        android:id="@+id/tv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25dp"
        android:text="@string/banner"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:layout_height="wrap_content"
        android:id="@+id/et_username"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="email"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_password" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:backgroundTint="@color/primary"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_login_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/login_question"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15dp"
        android:text="@string/login"
        android:layout_marginBottom="50dp"/>

</LinearLayout>