<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    android:gravity="center">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="25dp"
                android:textColor="@color/primary"
                android:layout_gravity="center"
                android:text="@string/add_product_banner"
                android:layout_marginBottom="50dp"/>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/product_name"
                />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/product_description"
                />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/product_price"
                />

            <Button
                android:id="@+id/btn_pick_pic"
                android:text="@string/pick_pic"
                android:layout_margin="5dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/iv_productPic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />


            <Button
                android:id="@+id/btn_register"
                android:text="@string/add_product"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/poppins"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_main" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/ic_add" />

        <ImageView
            android:id="@+id/iv_contacts"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_contacts" />

    </LinearLayout>
</RelativeLayout>














